[package]
name = "kurebcrypt"
version = "0.1.0"
authors = ["kurenaif <antyobido@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kurebcrypt"
path = "src/lib.rs"

[dependencies]
pprof = { version = "0.4", features = ["flamegraph", "protobuf"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = 1
